# FUTURE_ML_TaskNumber-3

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml  pages.yml  release.yml  train-model.yml
src/resume_ml/api/: fastapi_app.py
src/resume_ml/core/: extractor.py  gap_analyzer.py  matcher.py  parser.py  ranker.py
tests/: test_matcher.py  test_parser.py
